<resources>
    <!--activity_main-->
    <string name="app_name">测温手环</string>
    <string name="phone">输入手机号</string>
    <string name="code">输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="login">登录</string>

    <!--activity_home-->
    <string name="role">管理员:</string>
    <string name="loginName">张老师</string>
    <string name="cancel">退出登录</string>
    <string name="managePeople">管理人员数</string>
    <string name="manageClass">管理班级数</string>
    <string name="peopleNum">0</string>
    <string name="classNum">0</string>
    <string name="fever">今日发烧</string>
    <string name="feverNum">0</string>
    <string name="check">今日检测</string>
    <string name="checkrNum">0</string>
    <string name="bindInfo">设备绑定情况</string>
    <string name="wear">设备佩戴情况</string>
    <string name="toBind">进行设备绑定></string>
    <string name="icon">&#062;</string>
    <string name="toSeeList">查看数据日报></string>
    <string name="home_title">复工复课测温系统</string>


    <string name="detail_tab">明细</string>
    <string name="category_report_tab">类别报表</string>
    <string name="search">搜索</string>

    <!--activity_bindlist-->
    <string name="bind_all">全部</string>
    <string name="un_bind">未绑定</string>

    <!--activity_emptylist-->
    <string name="empty_choose">请在顶部选择</string>
    <string name="empty_see">您要查看的班级(人员组)</string>

    <!--activity_fail-->
    <string name="fail_time">登录超时，请重新</string>
    <string name="fail_login">登录</string>

    <!--activity_infolist-->
    <string name="info_all">全部数据</string>
    <string name="info_fever">发烧报警</string>
    <string name="info_remove">摘除报警</string>
    <string name="info_low">低电量报警</string>

    <!--bind_dialog-->
    <string name="bind_dialog1_ts">请将手环放置在PAD感应区</string>
    <string name="bind_dialog1_sbz">识别中...</string>
    <string name="bind_dialog1_ms">(30s)</string>
    <string name="bind_dialog2_fail">识别失败</string>
    <string name="bind_dialog2_return">返回</string>
    <string name="bind_dialog2_retry">重试</string>
    <string name="bind_dialog3_code">识别出的编号</string>
    <string name="bind_dialog3_ts">请确保上方编号与手环内侧印刷的号码一致时，再进行绑定操作。</string>
    <string name="bind_dialog3_qx">取消</string>
    <string name="bind_dialog3_bd">绑定</string>

    <!--list_dialog-->
    <string name="list_dialog_id">学号:</string>
    <string name="list_dialog_class_name">班级:</string>
    <string name="list_dialog_name">历史测温数据</string>


    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
</resources>