<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F2F5"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:layout_below="@+id/title1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="88dp"
            android:layout_height="24dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="12dp"
            android:gravity="left"
            app:srcCompat="@drawable/logo" />


        <LinearLayout
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginLeft="305dp"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/role"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/loginName"/>

        </LinearLayout>

        <Button
            android:layout_width="68dp"
            android:layout_height="31dp"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="14dp"
            android:textColor="#ffffff"
            android:background="@drawable/shape_btn"
            android:text="@string/cancel"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="529dp"
        android:layout_height="72dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="36dp"
        android:orientation="horizontal">

        <!--框2，水平排两个个LinearLayout-->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="28dp"
                app:srcCompat="@drawable/home_icon"
                />
            <!--框2中 每个小布局的数据信息-->
            <LinearLayout
                android:layout_width="61dp"
                android:layout_height="42dp"
                android:layout_marginLeft="121dp"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/managePeople"/>

                <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="right"
                android:text="@string/peopleNum"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="28dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="28dp"
                app:srcCompat="@drawable/class_num"
                />
            <LinearLayout
                android:layout_width="61dp"
                android:layout_height="42dp"
                android:layout_marginLeft="121dp"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="66dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/manageClass"/>

                <TextView
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:text="@string/classNum"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!--框3，垂直排三个LinearLayout-->
    <LinearLayout
        android:layout_width="529dp"
        android:layout_height="148dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="36dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

     <!--图片横向排-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="29dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="113dp"
                app:srcCompat="@drawable/home_icon"
                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="230dp"
                app:srcCompat="@drawable/detection"
                />
        </LinearLayout>
        <!--文字横向排-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="49dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="101dp"
                android:textSize="12sp"
                android:text="@string/fever"/>

            <TextView
                android:layout_width="49dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:layout_marginLeft="207dp"
                android:gravity="right"
                android:text="@string/check"/>
        </LinearLayout>

        <!--文字横向排-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/feverNum"/>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="216dp"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/checkrNum"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="529dp"
        android:layout_height="226dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="36dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <TextView
        android:layout_width="72dp"
        android:layout_height="18dp"
        android:textSize="12sp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:text="@string/bindInfo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="529dp"
        android:layout_height="226dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="36dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="18dp"
            android:textSize="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:text="@string/wear"/>

    </LinearLayout>

</LinearLayout>