<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F2F5"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/a_item"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="#36353a"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/title_info"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/home_title"
                android:textSize="15sp" >
            </TextView>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:layout_below="@+id/title1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="88dp"
            android:layout_height="24dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="12dp"
            android:gravity="left"
            app:srcCompat="@drawable/logo" />


        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/role"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/loginName"/>
            <Button
                android:id="@+id/log_out"
                android:layout_width="68dp"
                android:layout_height="31dp"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/shape_btn"
                android:text="@string/cancel"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="529dp"
        android:layout_height="72dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="36dp"
        android:orientation="horizontal">

        <!--框2，水平排两个个LinearLayout-->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="28dp"
                app:srcCompat="@drawable/home_icon"
                />
            <!--框2中 每个小布局的数据信息-->
            <LinearLayout
                android:layout_width="61dp"
                android:layout_height="42dp"
                android:layout_marginLeft="121dp"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/managePeople"/>

                <TextView
                    android:id="@+id/manage_person_num"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:text="@string/peopleNum"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="28dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="28dp"
                app:srcCompat="@drawable/class_num"
                />
            <LinearLayout
                android:layout_width="61dp"
                android:layout_height="42dp"
                android:layout_marginLeft="121dp"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="66dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/manageClass"/>

                <TextView
                    android:id="@+id/manage_class_num"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:text="@string/classNum"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!--框3，垂直排三个LinearLayout-->
    <LinearLayout
        android:layout_width="529dp"
        android:layout_height="178dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="36dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <!--图片横向排-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="29dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="113dp"
                app:srcCompat="@drawable/home_icon"
                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="230dp"
                app:srcCompat="@drawable/detection"
                />
        </LinearLayout>
        <!--文字横向排-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="49dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="101dp"
                android:textSize="12sp"
                android:text="@string/fever"/>

            <TextView
                android:layout_width="49dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:layout_marginLeft="207dp"
                android:gravity="right"
                android:text="@string/check"/>
        </LinearLayout>

        <!--文字横向排-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/today_fever_num"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/feverNum"/>

            <TextView
                android:id="@+id/today_check_num"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="216dp"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/checkrNum"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="529dp"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/seeList"
                android:layout_width="102dp"
                android:layout_height="25dp"
                android:layout_marginLeft="224dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/toSeeList"
                android:textColor="#67a4e6"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="529dp"
        android:layout_height="226dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="36dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="529dp"
            android:layout_height="45dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:layout_width="72dp"
                android:layout_height="15dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/bindInfo"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/bindlist"
                android:layout_width="102dp"
                android:layout_height="25dp"
                android:layout_marginLeft="329dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/toBind"
                android:textColor="#67a4e6"
                android:textSize="12sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_expense_piechart"
            android:layout_width="275dp"
            android:layout_height="160dp"
            android:layout_marginLeft="132dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/bind_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
<!--        <lecho.lib.hellocharts.view.PieChartView-->
<!--            android:id="@+id/piechart"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            tools:ignore="MissingClass">-->
<!--        </lecho.lib.hellocharts.view.PieChartView>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="529dp"
        android:layout_height="226dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="36dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="72dp"
            android:layout_height="18dp"
            android:textSize="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:text="@string/wear"/>

        <LinearLayout
            android:id="@+id/ll_iswear_piechart"
            android:layout_width="275dp"
            android:layout_height="160dp"
            android:layout_marginLeft="132dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/iswear_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>