<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="372dp"
    android:layout_height="258dp"
    android:background="@drawable/shape_corner"
    android:layout_marginTop="212dp"
    android:layout_marginLeft="115dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#FFFFFF"
        android:orientation="vertical">
        <TextView
            android:layout_width="108dp"
            android:layout_height="22dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="132dp"
            android:text="@string/bind_dialog3_code"
            android:textColor="#000000"
            android:textSize="18sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/dialog_mac_code"
            android:layout_width="262dp"
            android:layout_height="40dp"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="55dp"
            android:text="8888 6666 9999"
            android:background="@drawable/green_background"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="253dp"
            android:layout_height="40dp"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="59dp"
            android:text="@string/bind_dialog3_ts"
            android:textColor="#f2762f"
            android:textSize="15sp"
            android:gravity="center"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="199dp">
            <Button
                android:id="@+id/dialig_btn_cancel"
                android:layout_width="186dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:textSize="18sp"
                android:text="@string/bind_dialog3_qx"
                />
            <Button
                android:id="@+id/dialig_btn_sure"
                android:layout_width="186dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:textColor="#1e90ff"
                android:textSize="18sp"
                android:text="@string/bind_dialog3_bd"
                />

        </LinearLayout>
</RelativeLayout>